# rolling_hash_diff

./: Cargo.toml  README.md
resources/: buffered_rdiff_chunk_iterator_file2.txt  poem.txt  poem.v3.txt  test.txt  test.v2.txt
src/: lib.rs  main.rs
src/rdiff/: constants.rs  mod.rs
src/rdiff/chunk/: mod.rs
src/rdiff/chunk/iterator/: mod.rs
src/rdiff/chunk/iterator/tests/: mod.rs
src/rdiff/chunk/tests/: mod.rs
src/rdiff/delta/: mod.rs
src/rdiff/delta/tests/: mod.rs
src/rdiff/error/: messages.rs  mod.rs
src/rdiff/error/tests/: mod.rs
src/rdiff/hash/: mod.rs
src/rdiff/hash/strong/: mod.rs
src/rdiff/hash/strong/rdiff_sha1/: mod.rs
src/rdiff/hash/weak/: mod.rs
src/rdiff/hash/weak/rdiff_addler/: mod.rs
src/rdiff/io/: mod.rs
src/rdiff/io/tests/: mod.rs
src/rdiff/signature/: mod.rs
src/rdiff/signature/tests/: mod.rs
src/rdiff/util/: mod.rs
src/rdiff/util/tests/: mod.rs
tests/: integration_test.rs
tests/rdiff/: mod.rs
tests/rdiff/delta/: mod.rs
tests/rdiff/signature/: mod.rs
tests/rdiff/util/: mod.rs
