[package]
name = "rolling_hash_diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10.0"
adler = "1.0.2"
hex-literal = "0.3.4"
bincode = "1.3.3"
serde = { version = "1.0.130", features = ["derive"] }
